# zephyr-spi-flash-en25-driver

./: .clang-format  .clangd  .gitignore  CHANGELOG.md  CMakeLists.txt  Kconfig  README.md  makefile  nrf9160dk_nrf9160ns.overlay  prj.conf  west.yml
.github/workflows/: build.yaml  draft-new-release.yml  publish-new-release.yml  publish-release.yaml  twister.yaml
boards/: nrf52840dk_nrf52811.overlay  nrf9160dk_nrf9160ns.overlay
drivers/: CMakeLists.txt  Kconfig
drivers/flash/: CMakeLists.txt  Kconfig  spi_flash_en25.c
dts/bindings/: irnas,en25.yaml  mxicy,en25.yaml
scripts/: requirements.txt
src/: main.c
tests/flash_read_write/: CMakeLists.txt  prj.conf  testcase.yaml
tests/flash_read_write/boards/: nrf52840dk_nrf52811.overlay  nrf52840dk_nrf52840.overlay  nrf9160dk_nrf9160ns.overlay
tests/flash_read_write/src/: main.c
tests/integration/: testcase.yaml
